--- a/MPColumn/app/build.gradle
+++ b/MPColumn/app/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.squareup.okhttp3:okhttp:3.1.0'
     compile 'com.google.code.gson:gson:1.7.2'
+    compile 'com.github.bumptech.glide:glide:3.5.2'
+    compile 'com.android.support:support-v4:22.0.0'
 }
