--- a/MPColumn/app/src/main/AndroidManifest.xml
+++ b/MPColumn/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mprice.mpcolumn" >
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -9,9 +10,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-
         <activity
-            android:name=".activities.MainActivity"
+            android:name=".activities.SearchActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
@@ -19,6 +19,8 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".activities.ArticleActivity" >
         </activity>
     </application>
 
