--- a/MPColumn/app/build.gradle
+++ b/MPColumn/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile 'com.android.support:support-v4:22.0.0'
     compile 'org.parceler:parceler-api:1.0.4'
     apt 'org.parceler:parceler:1.0.4'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
 }
