--- a/MPColumn/app/build.gradle
+++ b/MPColumn/app/build.gradle
@@ -32,8 +32,9 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.1.0'
     compile 'com.google.code.gson:gson:1.7.2'
     compile 'com.github.bumptech.glide:glide:3.5.2'
-    compile 'com.android.support:support-v4:22.0.0'
+    compile 'com.android.support:support-v4:23.0.0'
     compile 'org.parceler:parceler-api:1.0.4'
     apt 'org.parceler:parceler:1.0.4'
     compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'jp.wasabeef:recyclerview-animators:2.2.0'
 }
