--- a/MPColumn/app/src/main/AndroidManifest.xml
+++ b/MPColumn/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.mprice.mpcolumn" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -14,13 +15,16 @@
             android:name=".activities.SearchActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+        <activity android:name=".activities.ArticleActivity" >
+        </activity>
+        <activity android:name=".activities.SplashActivity"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".activities.ArticleActivity" >
         </activity>
     </application>
 
